Added embedding, FAISS index, and retrival func

--- a/sentence_transformer.ipynb
+++ b/sentence_transformer.ipynb
@@ -104,6 +104,135 @@
     "#     pickle.dump(all_chunks, f)\n",
     "# print(\"Chunks saved to chunks.pkl\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04f49a9b",
+   "metadata": {},
+   "source": [
+    "Embedding, Indexing, and Retrieval process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aeefab03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 426 chunks\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "with open(\"chunks.pkl\", \"rb\") as f:\n",
+    "    all_chunks = pickle.load(f)\n",
+    "print(f\"Loaded {len(all_chunks)} chunks\")  # e.g., 30 chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b7cb03ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings shape: (426, 384)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "import numpy as np\n",
+    "\n",
+    "embed_model = SentenceTransformer('all-MiniLM-L6-v2')  # From Day 1\n",
+    "embeddings = embed_model.encode(all_chunks)  # List of arrays -> one big array\n",
+    "embeddings = np.array(embeddings).astype('float32')  # FAISS needs this\n",
+    "print(f\"Embeddings shape: {embeddings.shape}\")  # e.g., (30, 384) – chunks x dimensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6e2a4863",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index built with 426 vectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "import faiss\n",
+    "\n",
+    "dimension = embeddings.shape[1]  # e.g., 384\n",
+    "index = faiss.IndexFlatL2(dimension)  # Basic flat index (exact search, good for small data)\n",
+    "index.add(embeddings)  # Train/add your vectors\n",
+    "print(f\"Index built with {index.ntotal} vectors\")  # Matches chunk count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "577a84f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top indices: [[190 212  51]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test\n",
+    "dummy_query = embed_model.encode([\"AI bias in ethics\"])\n",
+    "distances, indices = index.search(dummy_query, k=3)  # Top 3 nearest\n",
+    "print(\"Top indices:\", indices)  # e.g., [5, 12, 3] – chunk IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "489984f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.73 | Chunk: Jr. was born on November 20, 1942, in Scranton, Pennsylvania. In 1953, the Biden family moved from P...\n",
+      "Score: 0.79 | Chunk: Joe Biden (born November 20, 1942, Scranton, Pennsylvania, U.S.) is the 46th president of the United...\n",
+      "Score: 0.79 | Chunk: Their Years in Office Quiz For a full transcript of Biden’s farewell address, click here. Early life...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from retrieval import *\n",
+    "sample_query = \"Joe Biden name is\"\n",
+    "results = retrieve_chunks(sample_query, embed_model, index, all_chunks)\n",
+    "for chunk, score in results:\n",
+    "    print(f\"Score: {score:.2f} | Chunk: {chunk[:100]}...\")  # Preview"
+   ]
   }
  ],
  "metadata": {
