--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b7d5815a",
    "metadata": {},
    "outputs": [
@@ -95,12 +95,12 @@
    "id": "c6d1e911",
    "metadata": {},
    "source": [
-    "Loading LLM model: GPT 2 - training knowledge cutoff - 2019"
+    "Loading LLM model: Qwen/Qwen2.5-7B-Instruct-1M - better for long context"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0f7118f9",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aeefab03",
    "metadata": {},
    "outputs": [
@@ -163,14 +163,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c577f12c",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b7cb03ab",
    "metadata": {},
    "outputs": [
@@ -204,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6e2a4863",
    "metadata": {},
    "outputs": [
@@ -226,211 +220,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "577a84f5",
+   "cell_type": "markdown",
+   "id": "1fc42638",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Test code \n",
-    "# dummy_query = embed_model.encode([\"AI bias in ethics\"])\n",
-    "# distances, indices = index.search(dummy_query, k=3)  # Top 3 nearest\n",
-    "# print(\"Top indices:\", indices)  # e.g., [5, 12, 3] – chunk IDs"
+    "Chat completion and comparision between two pipelines"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "489984f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testing retrival functionality\n",
-    "# from retrieval import *\n",
-    "# sample_query = \"With all the information given, The name of the 46th president of the United States is\"\n",
-    "# results = retrieve_chunks(sample_query, embed_model, index, all_chunks)\n",
-    "# for chunk, score in results:\n",
-    "#     print(f\"Score: {score:.2f} | Chunk: {chunk[:100]}...\")  # Preview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1fc42638",
-   "metadata": {},
-   "source": [
-    "Defining RAG pipeline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7fa479ec",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "afd8a85c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed: Tell me what happened to Joe Biden's , the 46th president of the USA, wife | Plain: 2.60s | RAG: 2.48s\n",
-      "Processed: Tell me Where was Joe Biden, the 46th president of the USA, born | Plain: 1.42s | RAG: 1.86s\n",
-      "Processed: Tell me where did Joe Biden, the 46th president of the USA, graduated | Plain: 1.78s | RAG: 2.35s\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "query",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "plain_answer",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "rag_answer",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "plain_latency",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "rag_latency",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "9c53a85e-c17e-423e-84a2-25287222e1e7",
-       "rows": [
-        [
-         "0",
-         "Tell me what happened to Joe Biden's , the 46th president of the USA, wife",
-         "Jill Biden (born Jill Tracy Jacobs 1980",
-         "I don't have info on that.\n\nSources: 1.txt",
-         "2.5953269004821777",
-         "2.4790496826171875"
-        ],
-        [
-         "1",
-         "Tell me Where was Joe Biden, the 46th president of the USA, born",
-         "Joe Biden, the 46th President of the United States, was born in Scranton, Pennsylvania, USA.",
-         "Joe Biden was born in Scranton, Pennsylvania. [Source: 1.txt]\n\nSources: 1.txt",
-         "1.4154901504516602",
-         "1.8580586910247803"
-        ],
-        [
-         "2",
-         "Tell me where did Joe Biden, the 46th president of the USA, graduated",
-         "Joe Biden earned his bachelor’s degree from the **University of Delaware** (1965) and his law degree from **Syracuse University College of Law** (1968).",
-         "Joe Biden earned his undergraduate degree from the University of Delaware in 1965 and completed his law degree at Syracuse University’s College of Law in 1968. [Source: 1.txt]\n\nSources: 1.txt",
-         "1.7801542282104492",
-         "2.345470428466797"
-        ]
-       ],
-       "shape": {
-        "columns": 5,
-        "rows": 3
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>query</th>\n",
-       "      <th>plain_answer</th>\n",
-       "      <th>rag_answer</th>\n",
-       "      <th>plain_latency</th>\n",
-       "      <th>rag_latency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Tell me what happened to Joe Biden's , the 46t...</td>\n",
-       "      <td>Jill Biden (born Jill Tracy Jacobs 1980</td>\n",
-       "      <td>I don't have info on that.\\n\\nSources: 1.txt</td>\n",
-       "      <td>2.595327</td>\n",
-       "      <td>2.479050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Tell me Where was Joe Biden, the 46th presiden...</td>\n",
-       "      <td>Joe Biden, the 46th President of the United St...</td>\n",
-       "      <td>Joe Biden was born in Scranton, Pennsylvania. ...</td>\n",
-       "      <td>1.415490</td>\n",
-       "      <td>1.858059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Tell me where did Joe Biden, the 46th presiden...</td>\n",
-       "      <td>Joe Biden earned his bachelor’s degree from th...</td>\n",
-       "      <td>Joe Biden earned his undergraduate degree from...</td>\n",
-       "      <td>1.780154</td>\n",
-       "      <td>2.345470</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               query  \\\n",
-       "0  Tell me what happened to Joe Biden's , the 46t...   \n",
-       "1  Tell me Where was Joe Biden, the 46th presiden...   \n",
-       "2  Tell me where did Joe Biden, the 46th presiden...   \n",
-       "\n",
-       "                                        plain_answer  \\\n",
-       "0            Jill Biden (born Jill Tracy Jacobs 1980   \n",
-       "1  Joe Biden, the 46th President of the United St...   \n",
-       "2  Joe Biden earned his bachelor’s degree from th...   \n",
-       "\n",
-       "                                          rag_answer  plain_latency  \\\n",
-       "0       I don't have info on that.\\n\\nSources: 1.txt       2.595327   \n",
-       "1  Joe Biden was born in Scranton, Pennsylvania. ...       1.415490   \n",
-       "2  Joe Biden earned his undergraduate degree from...       1.780154   \n",
-       "\n",
-       "   rag_latency  \n",
-       "0     2.479050  \n",
-       "1     1.858059  \n",
-       "2     2.345470  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Getting response\n",
     "import pandas as pd\n",
@@ -440,7 +242,7 @@
     "from huggingface_hub import InferenceClient  # Add if not in pipelines\n",
     "\n",
     "# Assume client is defined, e.g.\n",
-    "client = InferenceClient(model=\"openai/gpt-oss-20b\")\n",
+    "# client = InferenceClient(model=\"openai/gpt-oss-20b\")\n",
     "\n",
     "# Define augment_prompt_no_query based on the idea\n",
     "def augment_prompt_no_query(retrieved_chunks):\n",
@@ -501,16 +303,48 @@
     "        })\n",
     "        print(f\"Processed: {query} | Plain: {plain_time:.2f}s | RAG: {rag_time:.2f}s\")\n",
     "    \n",
-    "    # Save to CSV\n",
+    "    # Save to CSV if you want\n",
     "    df = pd.DataFrame(results)\n",
     "    # df.to_csv('comparison_results.csv', index=False)\n",
     "    # print(\"Results saved to comparison_results.csv\")\n",
     "    return df\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b93ac757",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "HfHubHTTPError",
+     "evalue": "504 Server Error: Gateway Time-out for url: https://router.huggingface.co/featherless-ai/v1/chat/completions",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\utils\\_http.py:407\u001b[0m, in \u001b[0;36mhf_raise_for_status\u001b[1;34m(response, endpoint_name)\u001b[0m\n\u001b[0;32m    406\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 407\u001b[0m     \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    408\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\requests\\models.py:1026\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1025\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[1;32m-> 1026\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[1;31mHTTPError\u001b[0m: 504 Server Error: Gateway Time-out for url: https://router.huggingface.co/featherless-ai/v1/chat/completions",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mHfHubHTTPError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#TEST\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Test with 3 quick queries first\u001b[39;00m\n\u001b[0;32m      3\u001b[0m test_queries \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTell me what happened to Joe Biden\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms , the 46th president of the USA, wife\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTell me Where was Joe Biden, the 46th president of the USA, born\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTell me where did Joe Biden, the 46th president of the USA, graduated\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 4\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mcompare_ragged_outputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_queries\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membed_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_chunks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m df\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#RAG shows no hallucination and cite its sources. Plain LLM hallucinates more. \u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[7], line 34\u001b[0m, in \u001b[0;36mcompare_ragged_outputs\u001b[1;34m(queries, embed_model, index, all_chunks, max_length)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Plain LLM\u001b[39;00m\n\u001b[0;32m     33\u001b[0m plain_messages \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: query}]\n\u001b[1;32m---> 34\u001b[0m plain_response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchat_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplain_messages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m300\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m plain_output \u001b[38;5;241m=\u001b[39m plain_response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent  \u001b[38;5;66;03m# Extract content\u001b[39;00m\n\u001b[0;32m     36\u001b[0m plain_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time\n",
+      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\inference\\_client.py:919\u001b[0m, in \u001b[0;36mInferenceClient.chat_completion\u001b[1;34m(self, messages, model, stream, frequency_penalty, logit_bias, logprobs, max_tokens, n, presence_penalty, response_format, seed, stop, stream_options, temperature, tool_choice, tool_prompt, tools, top_logprobs, top_p, extra_body)\u001b[0m\n\u001b[0;32m    891\u001b[0m parameters \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    892\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: payload_model,\n\u001b[0;32m    893\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrequency_penalty\u001b[39m\u001b[38;5;124m\"\u001b[39m: frequency_penalty,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    910\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(extra_body \u001b[38;5;129;01mor\u001b[39;00m {}),\n\u001b[0;32m    911\u001b[0m }\n\u001b[0;32m    912\u001b[0m request_parameters \u001b[38;5;241m=\u001b[39m provider_helper\u001b[38;5;241m.\u001b[39mprepare_request(\n\u001b[0;32m    913\u001b[0m     inputs\u001b[38;5;241m=\u001b[39mmessages,\n\u001b[0;32m    914\u001b[0m     parameters\u001b[38;5;241m=\u001b[39mparameters,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    917\u001b[0m     api_key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtoken,\n\u001b[0;32m    918\u001b[0m )\n\u001b[1;32m--> 919\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_inner_post\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest_parameters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstream\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    921\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m stream:\n\u001b[0;32m    922\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _stream_chat_completion_response(data)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\inference\\_client.py:275\u001b[0m, in \u001b[0;36mInferenceClient._inner_post\u001b[1;34m(self, request_parameters, stream)\u001b[0m\n\u001b[0;32m    272\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m InferenceTimeoutError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInference call timed out: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrequest_parameters\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merror\u001b[39;00m  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[0;32m    274\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 275\u001b[0m     \u001b[43mhf_raise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    276\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39miter_lines() \u001b[38;5;28;01mif\u001b[39;00m stream \u001b[38;5;28;01melse\u001b[39;00m response\u001b[38;5;241m.\u001b[39mcontent\n\u001b[0;32m    277\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m error:\n",
+      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\utils\\_http.py:480\u001b[0m, in \u001b[0;36mhf_raise_for_status\u001b[1;34m(response, endpoint_name)\u001b[0m\n\u001b[0;32m    476\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m _format(HfHubHTTPError, message, response) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m    478\u001b[0m \u001b[38;5;66;03m# Convert `HTTPError` into a `HfHubHTTPError` to display request information\u001b[39;00m\n\u001b[0;32m    479\u001b[0m \u001b[38;5;66;03m# as well (request id and/or server error message)\u001b[39;00m\n\u001b[1;32m--> 480\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m _format(HfHubHTTPError, \u001b[38;5;28mstr\u001b[39m(e), response) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
+      "\u001b[1;31mHfHubHTTPError\u001b[0m: 504 Server Error: Gateway Time-out for url: https://router.huggingface.co/featherless-ai/v1/chat/completions"
+     ]
+    }
+   ],
+   "source": [
+    "#TEST\n",
     "# Test with 3 quick queries first\n",
     "test_queries = [\"Tell me what happened to Joe Biden's , the 46th president of the USA, wife\", \"Tell me Where was Joe Biden, the 46th president of the USA, born\", \"Tell me where did Joe Biden, the 46th president of the USA, graduated\"]\n",
     "df = compare_ragged_outputs(test_queries, embed_model, index, all_chunks, max_length=100)\n",
-    "df\n"
+    "df\n",
+    "#RAG shows no hallucination and cite its sources. Plain LLM hallucinates more. "
    ]
   }
  ],
