Another minor fix

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b7d5815a",
    "metadata": {},
    "outputs": [
@@ -95,12 +95,12 @@
    "id": "c6d1e911",
    "metadata": {},
    "source": [
-    "Loading LLM model: Qwen/Qwen2.5-7B-Instruct-1M - better for long context"
+    "Huggingface.co: gpt-oss-20b — for lower latency, and local or specialized use cases (21B parameters with 3.6B active parameters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0f7118f9",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     "from huggingface_hub import InferenceClient\n",
     "\n",
     "\n",
-    "client = InferenceClient(\"Qwen/Qwen2.5-7B-Instruct-1M\")\n"
+    "client = InferenceClient(model=\"openai/gpt-oss-20b\")\n"
    ]
   },
   {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "aeefab03",
    "metadata": {},
    "outputs": [
@@ -163,8 +163,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbb949ca",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b7cb03ab",
    "metadata": {},
    "outputs": [
@@ -198,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6e2a4863",
    "metadata": {},
    "outputs": [
@@ -229,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "afd8a85c",
    "metadata": {},
    "outputs": [],
@@ -242,7 +248,7 @@
     "from huggingface_hub import InferenceClient  # Add if not in pipelines\n",
     "\n",
     "# Assume client is defined, e.g.\n",
-    "# client = InferenceClient(model=\"openai/gpt-oss-20b\")\n",
+    "\n",
     "\n",
     "# Define augment_prompt_no_query based on the idea\n",
     "def augment_prompt_no_query(retrieved_chunks):\n",
@@ -313,29 +319,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b93ac757",
    "metadata": {},
    "outputs": [
     {
-     "ename": "HfHubHTTPError",
-     "evalue": "504 Server Error: Gateway Time-out for url: https://router.huggingface.co/featherless-ai/v1/chat/completions",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\utils\\_http.py:407\u001b[0m, in \u001b[0;36mhf_raise_for_status\u001b[1;34m(response, endpoint_name)\u001b[0m\n\u001b[0;32m    406\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 407\u001b[0m     \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    408\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\requests\\models.py:1026\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1025\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[1;32m-> 1026\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[1;31mHTTPError\u001b[0m: 504 Server Error: Gateway Time-out for url: https://router.huggingface.co/featherless-ai/v1/chat/completions",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mHfHubHTTPError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#TEST\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Test with 3 quick queries first\u001b[39;00m\n\u001b[0;32m      3\u001b[0m test_queries \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTell me what happened to Joe Biden\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms , the 46th president of the USA, wife\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTell me Where was Joe Biden, the 46th president of the USA, born\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTell me where did Joe Biden, the 46th president of the USA, graduated\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 4\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mcompare_ragged_outputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtest_queries\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membed_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_chunks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m df\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#RAG shows no hallucination and cite its sources. Plain LLM hallucinates more. \u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[7], line 34\u001b[0m, in \u001b[0;36mcompare_ragged_outputs\u001b[1;34m(queries, embed_model, index, all_chunks, max_length)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m# Plain LLM\u001b[39;00m\n\u001b[0;32m     33\u001b[0m plain_messages \u001b[38;5;241m=\u001b[39m [{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: query}]\n\u001b[1;32m---> 34\u001b[0m plain_response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchat_completion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplain_messages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m300\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m plain_output \u001b[38;5;241m=\u001b[39m plain_response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent  \u001b[38;5;66;03m# Extract content\u001b[39;00m\n\u001b[0;32m     36\u001b[0m plain_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time\n",
-      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\inference\\_client.py:919\u001b[0m, in \u001b[0;36mInferenceClient.chat_completion\u001b[1;34m(self, messages, model, stream, frequency_penalty, logit_bias, logprobs, max_tokens, n, presence_penalty, response_format, seed, stop, stream_options, temperature, tool_choice, tool_prompt, tools, top_logprobs, top_p, extra_body)\u001b[0m\n\u001b[0;32m    891\u001b[0m parameters \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    892\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: payload_model,\n\u001b[0;32m    893\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrequency_penalty\u001b[39m\u001b[38;5;124m\"\u001b[39m: frequency_penalty,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    910\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(extra_body \u001b[38;5;129;01mor\u001b[39;00m {}),\n\u001b[0;32m    911\u001b[0m }\n\u001b[0;32m    912\u001b[0m request_parameters \u001b[38;5;241m=\u001b[39m provider_helper\u001b[38;5;241m.\u001b[39mprepare_request(\n\u001b[0;32m    913\u001b[0m     inputs\u001b[38;5;241m=\u001b[39mmessages,\n\u001b[0;32m    914\u001b[0m     parameters\u001b[38;5;241m=\u001b[39mparameters,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    917\u001b[0m     api_key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtoken,\n\u001b[0;32m    918\u001b[0m )\n\u001b[1;32m--> 919\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_inner_post\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrequest_parameters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstream\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    921\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m stream:\n\u001b[0;32m    922\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _stream_chat_completion_response(data)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\inference\\_client.py:275\u001b[0m, in \u001b[0;36mInferenceClient._inner_post\u001b[1;34m(self, request_parameters, stream)\u001b[0m\n\u001b[0;32m    272\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m InferenceTimeoutError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInference call timed out: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrequest_parameters\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merror\u001b[39;00m  \u001b[38;5;66;03m# type: ignore\u001b[39;00m\n\u001b[0;32m    274\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 275\u001b[0m     \u001b[43mhf_raise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    276\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39miter_lines() \u001b[38;5;28;01mif\u001b[39;00m stream \u001b[38;5;28;01melse\u001b[39;00m response\u001b[38;5;241m.\u001b[39mcontent\n\u001b[0;32m    277\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m error:\n",
-      "File \u001b[1;32mc:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\utils\\_http.py:480\u001b[0m, in \u001b[0;36mhf_raise_for_status\u001b[1;34m(response, endpoint_name)\u001b[0m\n\u001b[0;32m    476\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m _format(HfHubHTTPError, message, response) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m    478\u001b[0m \u001b[38;5;66;03m# Convert `HTTPError` into a `HfHubHTTPError` to display request information\u001b[39;00m\n\u001b[0;32m    479\u001b[0m \u001b[38;5;66;03m# as well (request id and/or server error message)\u001b[39;00m\n\u001b[1;32m--> 480\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m _format(HfHubHTTPError, \u001b[38;5;28mstr\u001b[39m(e), response) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n",
-      "\u001b[1;31mHfHubHTTPError\u001b[0m: 504 Server Error: Gateway Time-out for url: https://router.huggingface.co/featherless-ai/v1/chat/completions"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed: Tell me what happened to Joe Biden's , the 46th president of the USA, wife | Plain: 3.16s | RAG: 1.20s\n",
+      "Processed: Tell me Where was Joe Biden, the 46th president of the USA, born | Plain: 1.04s | RAG: 1.22s\n",
+      "Processed: Tell me where did Joe Biden, the 46th president of the USA, graduated | Plain: 2.06s | RAG: 2.28s\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "query",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "plain_answer",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "rag_answer",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "plain_latency",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "rag_latency",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "5145dc92-a2d1-4d61-849a-0dd82f35d7ae",
+       "rows": [
+        [
+         "0",
+         "Tell me what happened to Joe Biden's , the 46th president of the USA, wife",
+         "Jill Biden, the wife of President Joe Biden (the 46th president of the United States), is alive and continues to play an active public role.  She has served as the First Lady since **",
+         "I don't have info on that.\n\nSources: 1.txt",
+         "3.160740375518799",
+         "1.2013530731201172"
+        ],
+        [
+         "1",
+         "Tell me Where was Joe Biden, the 46th president of the USA, born",
+         "Joe Biden, the 46th President of the United States, was born in **Scranton, Pennsylvania**.",
+         "Joe Biden was born in Scranton, Pennsylvania. [Source: 1.txt]\n\nSources: 1.txt",
+         "1.0379421710968018",
+         "1.2150473594665527"
+        ],
+        [
+         "2",
+         "Tell me where did Joe Biden, the 46th president of the USA, graduated",
+         null,
+         "Joe Biden earned his undergraduate degree from the **University of Delaware** in 1965 and went on to law school at **Syracuse University College of Law**, graduating in 1968. [Source: 1.txt]\n\nSources: 1.txt",
+         "2.05607271194458",
+         "2.2762274742126465"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>query</th>\n",
+       "      <th>plain_answer</th>\n",
+       "      <th>rag_answer</th>\n",
+       "      <th>plain_latency</th>\n",
+       "      <th>rag_latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tell me what happened to Joe Biden's , the 46t...</td>\n",
+       "      <td>Jill Biden, the wife of President Joe Biden (t...</td>\n",
+       "      <td>I don't have info on that.\\n\\nSources: 1.txt</td>\n",
+       "      <td>3.160740</td>\n",
+       "      <td>1.201353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tell me Where was Joe Biden, the 46th presiden...</td>\n",
+       "      <td>Joe Biden, the 46th President of the United St...</td>\n",
+       "      <td>Joe Biden was born in Scranton, Pennsylvania. ...</td>\n",
+       "      <td>1.037942</td>\n",
+       "      <td>1.215047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tell me where did Joe Biden, the 46th presiden...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Joe Biden earned his undergraduate degree from...</td>\n",
+       "      <td>2.056073</td>\n",
+       "      <td>2.276227</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               query  \\\n",
+       "0  Tell me what happened to Joe Biden's , the 46t...   \n",
+       "1  Tell me Where was Joe Biden, the 46th presiden...   \n",
+       "2  Tell me where did Joe Biden, the 46th presiden...   \n",
+       "\n",
+       "                                        plain_answer  \\\n",
+       "0  Jill Biden, the wife of President Joe Biden (t...   \n",
+       "1  Joe Biden, the 46th President of the United St...   \n",
+       "2                                               None   \n",
+       "\n",
+       "                                          rag_answer  plain_latency  \\\n",
+       "0       I don't have info on that.\\n\\nSources: 1.txt       3.160740   \n",
+       "1  Joe Biden was born in Scranton, Pennsylvania. ...       1.037942   \n",
+       "2  Joe Biden earned his undergraduate degree from...       2.056073   \n",
+       "\n",
+       "   rag_latency  \n",
+       "0     1.201353  \n",
+       "1     1.215047  \n",
+       "2     2.276227  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
