Using cosine similarity for citing sources more accurately

--- a/main.ipynb
+++ b/main.ipynb
@@ -239,15 +239,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Getting response\n",
     "import pandas as pd\n",
     "import time\n",
     "from pipelines import * \n",
     "import re\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "import numpy as np\n",
+    "import pickle  \n",
     "\n",
     "\n",
-    "\n",
-    "# Define augment_prompt_no_query based on the idea\n",
     "def augment_prompt_no_query(retrieved_chunks):\n",
     "    context_parts = []\n",
     "    for chunk_tuple in retrieved_chunks:\n",
@@ -257,11 +257,38 @@
     "        context_parts.append(f\"[Source ID: {source_id}]\\n{text}\")\n",
     "    \n",
     "    context = \"\\n\\n\".join(context_parts)\n",
-    "    prompt = f\"\"\"Use the following context to answer the question factually. If the context doesn't cover it, say \"I don't have info on that.\"\n",
-    "                    When referencing information from the context, include the [Source ID: x] inline in your answer where it's used.\n",
+    "    prompt = f\"\"\"Use the following context to answer the question factually. If the context doesn't cover it, say \"I don't have info on that. You MUST always provide a response—do not return nothing or an empty answer\"\n",
     "    \n",
     "            Context: {context}\"\"\"\n",
-    "    return prompt\n",
+    "    return prompt  # this is prompt engineering\n",
+    "\n",
+    " # Use embedding model for Post-Generation Similarity Matching in conjunction with traditional regex searching\n",
+    "def attribute_sources(ragged_output, retrieved_chunks, embed_model, threshold=0.7):\n",
+    "    if not ragged_output:\n",
+    "        return []\n",
+    "    \n",
+    "\n",
+    "    sentences = [s.strip() for s in ragged_output.split('.') if s.strip()]\n",
+    "    \n",
+    "    if not sentences:\n",
+    "        return []\n",
+    "    \n",
+    "    # Embed response sentences\n",
+    "    sent_embeds = embed_model.encode(sentences)\n",
+    "    \n",
+    "    # Embed retrieved chunks\n",
+    "    chunk_texts = [chunk_tuple[0]['text'] for chunk_tuple in retrieved_chunks]\n",
+    "    chunk_embeds = embed_model.encode(chunk_texts)\n",
+    "    \n",
+    "    used_source_ids = set()\n",
+    "    for sent_embed in sent_embeds:\n",
+    "        similarities = util.cos_sim(sent_embed, chunk_embeds)[0]\n",
+    "        max_sim_idx = np.argmax(similarities)\n",
+    "        if similarities[max_sim_idx] >= threshold:\n",
+    "            source_id = retrieved_chunks[max_sim_idx][0]['source_id']\n",
+    "            used_source_ids.add(source_id)\n",
+    "    \n",
+    "    return sorted(used_source_ids)\n",
     "\n",
     "def compare_ragged_outputs(queries, embed_model, index, all_chunks, max_length=300):\n",
     "    with open(\"source_map.pkl\", \"rb\") as f:\n",
@@ -271,32 +298,50 @@
     "        start_time = time.time()\n",
     "        \n",
     "        # Plain LLM\n",
-    "        plain_messages = [{\"role\": \"user\", \"content\": query}]\n",
+    "        plain_messages = [{\"role\": \"system\", \"content\": \"You MUST always provide a response—do not return nothing or an empty answer\"}, {\"role\": \"user\", \"content\": query}]\n",
     "        plain_response = client.chat_completion(plain_messages, max_tokens=300)\n",
     "        plain_output = plain_response.choices[0].message.content  # Extract content\n",
     "        plain_time = time.time() - start_time\n",
-    "        \n",
+    "\n",
+    "        if plain_output is None: # can still return None if there is error in API call\n",
+    "            plain_output = \"\"  # Treat as empty string\n",
+    "            print(f\"Warning: LLM returned None for query '{query}'—handling as empty.\")\n",
+    "\n",
     "        # RAG\n",
     "        rag_start = time.time()\n",
     "        retrieved = retrieve_chunks(query, embed_model, index, all_chunks)\n",
     "        rag_messages = [{\"role\": \"system\", \"content\": augment_prompt_no_query(retrieved)}, {\"role\": \"user\", \"content\": query}]  # System first\n",
     "        rag_response = client.chat_completion(rag_messages, max_tokens=300)\n",
     "        ragged_output = rag_response.choices[0].message.content\n",
-    "        used_sources = \"\"\n",
-    "        if ragged_output:\n",
-    "            used_source_ids = set(re.findall(r'\\[Source ID: \\(\\d+\\)\\]', ragged_output))\n",
-    "            used_sources = set(SOURCE_MAP[int(id)] for id in used_source_ids if int(id) in SOURCE_MAP)\n",
+    "        used_sources = set()\n",
+    "        \n",
+    "        if ragged_output is None:\n",
+    "            ragged_output = \"\"  # Treat as empty string\n",
+    "            print(f\"Warning: RAG model returned None for query '{query}'—handling as empty.\")\n",
     "\n",
-    "        # If no citations parsed, fall back to all retrieved sources\n",
+    "        # Step 1: Try regex parsing for inline citations (as fallback or hybrid)\n",
+    "        used_source_ids_regex = set(re.findall(r'\\[Source ID: \\d+\\]', ragged_output))  # Fixed regex to match [Source ID: x]\n",
+    "        \n",
+    "        # Step 2: Use similarity matching as primary method\n",
+    "        used_source_ids_sim = set(attribute_sources(ragged_output, retrieved, embed_model))\n",
+    "        \n",
+    "        # Combine: Use similarity primarily, add regex if any unique\n",
+    "        used_source_ids = used_source_ids_sim.union(used_source_ids_regex)\n",
+    "        \n",
+    "        # Map to file names\n",
+    "        used_sources = {SOURCE_MAP[int(sid)] for sid in used_source_ids if int(sid) in SOURCE_MAP}\n",
+    "        \n",
+    "        # If no citations found, fall back to all retrieved sources\n",
     "        if not used_sources:\n",
-    "            used_sources = [\"No sources was used\"]\n",
+    "            used_source_ids_all = set(chunk_tuple[0]['source_id'] for chunk_tuple in retrieved)\n",
+    "            used_sources = {SOURCE_MAP[sid] for sid in used_source_ids_all if sid in SOURCE_MAP}\n",
     "        \n",
     "        # Sort and format\n",
     "        sources_list = sorted(used_sources)\n",
-    "        sources_str = \"Sources: \" + \", \".join(sources_list)\n",
+    "        sources_str = \"Sources: \" + \", \".join(sources_list) if sources_list else \"No sources used.\"\n",
     "        \n",
     "        # Append to ragged_output\n",
-    "        if ragged_output is not None: full_output = \" \".join([ragged_output, \"\\n\\n\", sources_str])\n",
+    "        full_output = ragged_output + \"\\n\\n\" + sources_str if ragged_output else \"No output generated.\"\n",
     "\n",
     "        rag_time = time.time() - rag_start\n",
     "        \n",
@@ -313,15 +358,12 @@
     "    df = pd.DataFrame(results)\n",
     "    # df.to_csv('comparison_results.csv', index=False)\n",
     "    # print(\"Results saved to comparison_results.csv\")\n",
-    "    return df\n",
-    "\n",
-    "###PROBLEM WITH V1. Citation is unreliable as LLM may hallucinate the source id itself, leading to regex inability to identify source. Not suitable for high-stake field i.e. healthcare\n",
-    "\n"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b93ac757",
    "metadata": {},
    "outputs": [
@@ -329,9 +371,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed: What happened to Bidens' wife? | Plain: 2.23s | RAG: 2.10s\n",
-      "Processed: Where was Joe Biden born? | Plain: 1.09s | RAG: 1.67s\n",
-      "Processed: Where did Joe Biden graduated? | Plain: 2.65s | RAG: 2.16s\n"
+      "Processed: What happened to Bidens' wife? | Plain: 2.85s | RAG: 1.67s\n",
+      "Processed: Where was Joe Biden born? | Plain: 1.00s | RAG: 1.13s\n",
+      "Warning: LLM returned None for query 'Where did Joe Biden graduated?'—handling as empty.\n",
+      "Processed: Where did Joe Biden graduated? | Plain: 2.31s | RAG: 2.22s\n"
      ]
     },
     {
@@ -351,7 +394,7 @@
         {
          "name": "plain_answer",
          "rawType": "object",
-         "type": "unknown"
+         "type": "string"
         },
         {
          "name": "rag_answer",
@@ -369,31 +412,31 @@
          "type": "float"
         }
        ],
-       "ref": "ae9880ba-de5e-4273-9c25-c9955a5b2c40",
+       "ref": "b0b9a1c6-7127-4f7d-a9eb-a68cf9055fc8",
        "rows": [
         [
          "0",
          "What happened to Bidens' wife?",
-         null,
-         "I don't have info on that. \n\n Sources: No sources was used",
-         "2.2310712337493896",
-         "2.0999865531921387"
+         "There’s no credible evidence that anything bad has happened to Jill Biden. She is alive and continues to work as a teacher, author, and First Lady. If you’ve come across a story claiming otherwise, it’s a rumor or misinformation—Jill Biden hasn't been the victim of any violent incident or death.",
+         "I don't have info on that.\n\nSources: 1.txt",
+         "2.85200834274292",
+         "1.666628122329712"
         ],
         [
          "1",
          "Where was Joe Biden born?",
-         "Joe Biden was born in Scranton, Pennsylvania, USA.",
-         "Joe Biden was born in Scranton, Pennsylvania. [Source ID: 1] \n\n Sources: No sources was used",
-         "1.0859038829803467",
-         "1.6718056201934814"
+         "Joe Biden was born in Scranton, **Pennsylvania**, USA.",
+         "Joe Biden was born in Scranton, Pennsylvania.\n\nSources: 1.txt",
+         "1.0012609958648682",
+         "1.1292359828948975"
         ],
         [
          "2",
          "Where did Joe Biden graduated?",
-         "Joe Biden earned his undergraduate degree at **the University of Delaware** (graduated 1965 with a Bachelor of Arts in History and Political Science) and later completed law school at **Syracuse University College of Law**, receiving his Juris Doctor in 1968.",
-         "Joe Biden earned a bachelor’s degree from the University of Delaware in 1965 and then went on to graduate with a law degree from Syracuse University’s College of Law in 1968. [Source ID: 1] \n\n Sources: No sources was used",
-         "2.650284767150879",
-         "2.160999059677124"
+         "",
+         "Joe Biden graduated from the University of Delaware in 1965 and from Syracuse University College of Law (now part of Syracuse University) in 1968.\n\nSources: 1.txt",
+         "2.3116705417633057",
+         "2.221756935119629"
         ]
        ],
        "shape": {
@@ -431,26 +474,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>What happened to Bidens' wife?</td>\n",
-       "      <td>None</td>\n",
-       "      <td>I don't have info on that. \\n\\n Sources: No so...</td>\n",
-       "      <td>2.231071</td>\n",
-       "      <td>2.099987</td>\n",
+       "      <td>There’s no credible evidence that anything bad...</td>\n",
+       "      <td>I don't have info on that.\\n\\nSources: 1.txt</td>\n",
+       "      <td>2.852008</td>\n",
+       "      <td>1.666628</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Where was Joe Biden born?</td>\n",
-       "      <td>Joe Biden was born in Scranton, Pennsylvania, ...</td>\n",
-       "      <td>Joe Biden was born in Scranton, Pennsylvania. ...</td>\n",
-       "      <td>1.085904</td>\n",
-       "      <td>1.671806</td>\n",
+       "      <td>Joe Biden was born in Scranton, **Pennsylvania...</td>\n",
+       "      <td>Joe Biden was born in Scranton, Pennsylvania.\\...</td>\n",
+       "      <td>1.001261</td>\n",
+       "      <td>1.129236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Where did Joe Biden graduated?</td>\n",
-       "      <td>Joe Biden earned his undergraduate degree at *...</td>\n",
-       "      <td>Joe Biden earned a bachelor’s degree from the ...</td>\n",
-       "      <td>2.650285</td>\n",
-       "      <td>2.160999</td>\n",
+       "      <td></td>\n",
+       "      <td>Joe Biden graduated from the University of Del...</td>\n",
+       "      <td>2.311671</td>\n",
+       "      <td>2.221757</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -463,29 +506,29 @@
        "2  Where did Joe Biden graduated?   \n",
        "\n",
        "                                        plain_answer  \\\n",
-       "0                                               None   \n",
-       "1  Joe Biden was born in Scranton, Pennsylvania, ...   \n",
-       "2  Joe Biden earned his undergraduate degree at *...   \n",
+       "0  There’s no credible evidence that anything bad...   \n",
+       "1  Joe Biden was born in Scranton, **Pennsylvania...   \n",
+       "2                                                      \n",
        "\n",
        "                                          rag_answer  plain_latency  \\\n",
-       "0  I don't have info on that. \\n\\n Sources: No so...       2.231071   \n",
-       "1  Joe Biden was born in Scranton, Pennsylvania. ...       1.085904   \n",
-       "2  Joe Biden earned a bachelor’s degree from the ...       2.650285   \n",
+       "0       I don't have info on that.\\n\\nSources: 1.txt       2.852008   \n",
+       "1  Joe Biden was born in Scranton, Pennsylvania.\\...       1.001261   \n",
+       "2  Joe Biden graduated from the University of Del...       2.311671   \n",
        "\n",
        "   rag_latency  \n",
-       "0     2.099987  \n",
-       "1     1.671806  \n",
-       "2     2.160999  "
+       "0     1.666628  \n",
+       "1     1.129236  \n",
+       "2     2.221757  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#TEST\n",
-    "# Test with 3 quick queries first\n",
+    "# Test with 3 quick queries \n",
     "test_queries = [\"What happened to Bidens' wife?\", \"Where was Joe Biden born?\", \"Where did Joe Biden graduated?\"]\n",
     "df = compare_ragged_outputs(test_queries, embed_model, index, all_chunks, max_length=100)\n",
     "df\n",
