--- a/main.ipynb
+++ b/main.ipynb
@@ -10,33 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b7d5815a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\nguye\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 1.txt as source_id 1, added 238 chunks\n",
-      "Processed 10.txt as source_id 2, added 13 chunks\n",
-      "Processed 2.txt as source_id 3, added 11 chunks\n",
-      "Processed 3.txt as source_id 4, added 60 chunks\n",
-      "Processed 4.txt as source_id 5, added 63 chunks\n",
-      "Processed 5.txt as source_id 6, added 13 chunks\n",
-      "Processed 6.txt as source_id 7, added 6 chunks\n",
-      "Processed 7.txt as source_id 8, added 8 chunks\n",
-      "Processed 8.txt as source_id 9, added 9 chunks\n",
-      "Processed 9.txt as source_id 10, added 5 chunks\n",
-      "Total chunks created: 426\n",
+      "Processed article_ag as source_id 1, added 21 chunks\n",
+      "Processed article_sa as source_id 2, added 7 chunks\n",
+      "Processed article_th as source_id 3, added 88 chunks\n",
+      "Processed diggit_mag as source_id 4, added 32 chunks\n",
+      "Processed editorial_ as source_id 5, added 19 chunks\n",
+      "Processed fullbright as source_id 6, added 6 chunks\n",
+      "Processed In_search_ as source_id 7, added 46 chunks\n",
+      "Processed reuters_th as source_id 8, added 7 chunks\n",
+      "Processed saigoneer. as source_id 9, added 17 chunks\n",
+      "Processed song_your_ as source_id 10, added 3 chunks\n",
+      "Processed TCS-Buddhi as source_id 11, added 198 chunks\n",
+      "Processed thenewlens as source_id 12, added 10 chunks\n",
+      "Processed the_new_yo as source_id 13, added 11 chunks\n",
+      "Processed Trinh Cong as source_id 14, added 19 chunks\n",
+      "Processed Trinh_Cong as source_id 15, added 9 chunks\n",
+      "Processed trinh_cong as source_id 16, added 3 chunks\n",
+      "Processed trinh_cong as source_id 17, added 3 chunks\n",
+      "Processed Vietcetera as source_id 18, added 18 chunks\n",
+      "Processed vietcetera as source_id 19, added 17 chunks\n",
+      "Processed wikipedia_ as source_id 20, added 40 chunks\n",
+      "Total chunks created: 574\n",
       "Data retrieval is complete\n"
      ]
     }
@@ -45,11 +47,10 @@
     "import os\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.document_loaders import TextLoader, PyPDFLoader\n",
-    "import pickle  # For saving chunks if needed\n",
+    "import pickle  \n",
     "\n",
     "# Path to your data folder\n",
-    "data_dir = \"data\"  # Assumes /data in your repo root\n",
-    "\n",
+    "data_dir = \"pre_chosen_sources\"  \n",
     "# List to hold all chunks\n",
     "all_chunks = []\n",
     "source_map = {}\n",
@@ -83,7 +84,7 @@
     "    for chunk in file_chunks:\n",
     "        all_chunks.append({'text': chunk, 'source_id': id}) #updated to cite according to sources' name\n",
     "    \n",
-    "    print(f\"Processed {file_name[:10]} as source_id {id}, added {len(file_chunks)} chunks\")\n",
+    "    print(f\"Processed {file_name[:10]} ... as source_id {id}, added {len(file_chunks)} chunks\")\n",
     "\n",
     "\n",
     "# Final count\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "0f7118f9",
    "metadata": {},
    "outputs": [],
@@ -121,7 +122,7 @@
     "from huggingface_hub import InferenceClient\n",
     "\n",
     "\n",
-    "client = InferenceClient(model=\"openai/gpt-oss-20b\")\n"
+    "client = InferenceClient(model=\"meta-llama/Meta-Llama-3.1-405B-Instruct\")\n"
    ]
   },
   {
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "aeefab03",
    "metadata": {},
    "outputs": [
@@ -142,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 426 chunks\n"
+      "Loaded 574 chunks\n"
      ]
     }
    ],
@@ -162,14 +163,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bbb949ca",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "b7cb03ab",
    "metadata": {},
    "outputs": [
@@ -177,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: (426, 384)\n"
+      "Embeddings shape: (574, 384)\n"
      ]
     }
    ],
@@ -203,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "6e2a4863",
    "metadata": {},
    "outputs": [
@@ -211,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index built with 426 vectors\n"
+      "Index built with 574 vectors\n"
      ]
     }
    ],
@@ -356,9 +351,17 @@
     "    \n",
     "    # Save to CSV if you want\n",
     "    df = pd.DataFrame(results)\n",
-    "    # df.to_csv('comparison_results.csv', index=False)\n",
-    "    # print(\"Results saved to comparison_results.csv\")\n",
+    "    df.to_csv('comparison_results.csv', index=False)\n",
+    "    print(\"Results saved to comparison_results.csv\")\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a4706d9",
+   "metadata": {},
+   "source": [
+    "TEST SPACE\n"
    ]
   },
   {
@@ -366,172 +369,21 @@
    "execution_count": null,
    "id": "b93ac757",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed: What happened to Bidens' wife? | Plain: 2.85s | RAG: 1.67s\n",
-      "Processed: Where was Joe Biden born? | Plain: 1.00s | RAG: 1.13s\n",
-      "Warning: LLM returned None for query 'Where did Joe Biden graduated?'—handling as empty.\n",
-      "Processed: Where did Joe Biden graduated? | Plain: 2.31s | RAG: 2.22s\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "query",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "plain_answer",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "rag_answer",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "plain_latency",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "rag_latency",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "b0b9a1c6-7127-4f7d-a9eb-a68cf9055fc8",
-       "rows": [
-        [
-         "0",
-         "What happened to Bidens' wife?",
-         "There’s no credible evidence that anything bad has happened to Jill Biden. She is alive and continues to work as a teacher, author, and First Lady. If you’ve come across a story claiming otherwise, it’s a rumor or misinformation—Jill Biden hasn't been the victim of any violent incident or death.",
-         "I don't have info on that.\n\nSources: 1.txt",
-         "2.85200834274292",
-         "1.666628122329712"
-        ],
-        [
-         "1",
-         "Where was Joe Biden born?",
-         "Joe Biden was born in Scranton, **Pennsylvania**, USA.",
-         "Joe Biden was born in Scranton, Pennsylvania.\n\nSources: 1.txt",
-         "1.0012609958648682",
-         "1.1292359828948975"
-        ],
-        [
-         "2",
-         "Where did Joe Biden graduated?",
-         "",
-         "Joe Biden graduated from the University of Delaware in 1965 and from Syracuse University College of Law (now part of Syracuse University) in 1968.\n\nSources: 1.txt",
-         "2.3116705417633057",
-         "2.221756935119629"
-        ]
-       ],
-       "shape": {
-        "columns": 5,
-        "rows": 3
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>query</th>\n",
-       "      <th>plain_answer</th>\n",
-       "      <th>rag_answer</th>\n",
-       "      <th>plain_latency</th>\n",
-       "      <th>rag_latency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>What happened to Bidens' wife?</td>\n",
-       "      <td>There’s no credible evidence that anything bad...</td>\n",
-       "      <td>I don't have info on that.\\n\\nSources: 1.txt</td>\n",
-       "      <td>2.852008</td>\n",
-       "      <td>1.666628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Where was Joe Biden born?</td>\n",
-       "      <td>Joe Biden was born in Scranton, **Pennsylvania...</td>\n",
-       "      <td>Joe Biden was born in Scranton, Pennsylvania.\\...</td>\n",
-       "      <td>1.001261</td>\n",
-       "      <td>1.129236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Where did Joe Biden graduated?</td>\n",
-       "      <td></td>\n",
-       "      <td>Joe Biden graduated from the University of Del...</td>\n",
-       "      <td>2.311671</td>\n",
-       "      <td>2.221757</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            query  \\\n",
-       "0  What happened to Bidens' wife?   \n",
-       "1       Where was Joe Biden born?   \n",
-       "2  Where did Joe Biden graduated?   \n",
-       "\n",
-       "                                        plain_answer  \\\n",
-       "0  There’s no credible evidence that anything bad...   \n",
-       "1  Joe Biden was born in Scranton, **Pennsylvania...   \n",
-       "2                                                      \n",
-       "\n",
-       "                                          rag_answer  plain_latency  \\\n",
-       "0       I don't have info on that.\\n\\nSources: 1.txt       2.852008   \n",
-       "1  Joe Biden was born in Scranton, Pennsylvania.\\...       1.001261   \n",
-       "2  Joe Biden graduated from the University of Del...       2.311671   \n",
-       "\n",
-       "   rag_latency  \n",
-       "0     1.666628  \n",
-       "1     1.129236  \n",
-       "2     2.221757  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TEST\n",
-    "# Test with 3 quick queries \n",
-    "test_queries = [\"What happened to Bidens' wife?\", \"Where was Joe Biden born?\", \"Where did Joe Biden graduated?\"]\n",
-    "df = compare_ragged_outputs(test_queries, embed_model, index, all_chunks, max_length=100)\n",
-    "df\n",
+    "#uncomment to test\n",
+    "# test_queries = [\n",
+    "#         \"What was the first song made by Trinh Cong Son?\",\n",
+    "#         \"Where was Trinh Cong Son born?\", \n",
+    "#         \"How many songs did Trinh Cong Son produce?\",\n",
+    "#         \"Trinh Cong Son was nickname?\", \n",
+    "#         \"Trinh Cong Son favorite song is ?\", \n",
+    "#         \"How influential was Trinh Cong Son's legacy\",\n",
+    "#         \"Was Trinh Cong Son consider 'Bob Dylan 'of Vietnam\",\n",
+    "#         \"DId Trinh Cong Son write antiwar songs?\"]\n",
+    "# df = compare_ragged_outputs(test_queries, embed_model, index, all_chunks, max_length=100)\n",
+    "# df\n",
     "#RAG shows no hallucination and cite its sources. Plain LLM hallucinates more. "
    ]
   }
